feat: add ttm mode
